Plex/plex-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker:plexpass
          imagePullPolicy: Always
          ports:
            - containerPort: 32400
              hostPort: 32401
          volumeMounts:
            - name: nfs-plex-media
              mountPath: "/data"
            - name: nfs-plex-config
              mountPath: "/config"
      volumes:
      - name: nfs-plex-config
        persistentVolumeClaim:
          claimName: nfs-plex-config
      - name: nfs-plex-media
        persistentVolumeClaim:
          claimName: nfs-plex-media
