Plex/plex-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  type: NodePort
  ports:
    - name: plex
      protocol: TCP
      port: 32400
      targetPort: 32400
      nodePort: 32401
